--- a/Vaga/Vaga.csproj
+++ b/Vaga/Vaga.csproj
@@ -55,6 +55,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Page1.xaml.cs">
+      <DependentUpon>Page1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Robo.xaml.cs">
+      <DependentUpon>Robo.xaml</DependentUpon>
+    </Compile>
     <Page Include="..\..\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,8 +75,24 @@
       <SubType>Code</SubType>
       <Link>MainWindow.xaml.cs</Link>
     </Compile>
+    <Page Include="Otrasl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Page1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Robo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manager.cs" />
+    <Compile Include="Otrasl.xaml.cs">
+      <DependentUpon>Otrasl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -107,6 +129,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="1579595759_38-p-foni-s-ulitsami-tokio-102.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="434007-vms-PMP-5.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
